# ratcam

./: .gitignore  LICENSE  README.md  pyproject.toml
capture/: README.md  pyproject.toml
capture/ratcam_capture/: __init__.py  capture.py  run.py
capture/service/: ratcam-capture.service
process/: README.md  pyproject.toml
process/ratcam_process/: __init__.py  process.py  run.py
ratcam/: capture.py  process.py  ratcam.py
