[tool.poetry]
name = "ratcam-capture"
version = "0.1.0"
description = "Tool for capturing videos of rats on the Jetson Nano"
authors = ["magnus <magnus.maynard@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
click = "8.0.4"
pycairo = "1.20.1"
PyGObject = "3.42.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ratcam-capture = "ratcam_capture:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
