[tool.poetry]
name = "ratcam-process"
version = "0.1.0"
description = "Tool for processing footage acquired by ratcam-capture"
authors = ["magnus <magnus.maynard@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
tqdm = "^4.66.1"
opencv-contrib-python = "^4.8.1.78"

[tool.poetry.scripts]
ratcam-process = "ratcam_process:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
